@@ -26,7 +26,7 @@ public class CarService extends AService <Integer, Car> {
     }
 
     public Iterable<Car> sortByYear() {
-        List<Car> cars = StreamSupport.stream(this.repo.findAll().spliterator(), false).toList();
+        List<Car> cars = StreamSupport.stream(this.repo.findAll().spliterator(), false).collect(Collectors.toList());
         cars.sort(Comparator.comparing(Car::getMakeYear));
         return cars;
     }
